--- a/style.css
+++ b/style.css
@@ -1,21 +1,90 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
 }
-/* .main-canvas {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
 
-#my-canvas {
-  position: absolute;
-  top: 100px;
-  left: 100px;
+.container {
+    display: flex;
+    flex-grow: 1;
+}
 
-  border: 2px solid black;
+.tools {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 250px;
+    background-color: lightblue;
+}
+
+.clear-tool {
+    display: flex;
+    flex-direction: column;
+}
+
+.erase-brush {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.btn {
+    text-align: center;
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
+}
+
+#colorPicker {
+    border: none;
+    padding: 0;
+    margin: 0;
+    height: 40px;
+    width: 100px
+}
+.color-picker {
+    border: none;
+    padding: 0;
+}
+.clearButton {
+    display: flex;
+    width: 100px;
+  
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    border: 0;
+    outline: 0;
+    border-radius: 0;
+    text-decoration: none;
+    padding: 0.5em;
+
+    background-color: #bbb;
+    height: 45px;
+    font-size: 18px;
+    margin-bottom: 0.75rem;
+}
+
+.stroke-tool {
+    
+    margin-bottom: 20px;
+}
+
+.download-btn {
+    display: flex;
+    width: 100px;
+    
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    border: 0;
+    outline: 0;
+    border-radius: 0;
+    text-decoration: none;
+    padding: 0.5em;
+
+    background-color: #bbb;
+    height: 45px;
+    background-color: hsl(211, 100%, 75%);
+    margin-bottom: 0.75rem;
+    font-size: 18px;
 }
